# turtlebot

turtlebot_bringup/: CMakeLists.txt  package.xml
turtlebot_bringup/launch/: minimal.launch.py  minimal.launch.xml
turtlebot_bringup/launch/includes/: description.launch.xml  mobile_base.launch.xml  robot.launch.xml
turtlebot_bringup/launch/includes/create/: mobile_base.launch.xml
turtlebot_bringup/scripts/: 52-turtlebot.rules
turtlebot_description/: CMakeLists.txt  package.xml
turtlebot_description/robots/: create_circles_rplidar.urdf.xacro
turtlebot_description/urdf/sensors/: r200.urdf.xacro  rplidar.urdf.xacro
turtlebot_description/urdf/stacks/: circles.urdf.xacro
