<package format="2">
  <name>turtlebot_bringup</name>
  <version>2.4.2</version>
  <description>
     turtlebot_bringup provides roslaunch scripts for starting the TurtleBot base functionality.
  </description>
  <author>Tully Foote</author>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="hunter.allen@ghostrobotics.io">Hunter L. Allen </maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/turtlebot_bringup</url>
  <url type="repository">https://github.com/turtlebot/turtlebot</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot/issues</url>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <exec_depend>create_node</exec_depend>
  <exec_depend>turtlebot_capabilities</exec_depend>
  <exec_depend>turtlebot_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

<!--   <run_depend>realsense_camera</run_depend>
  <run_depend>astra_launch</run_depend>
  <run_depend>zeroconf_avahi</run_depend>
  <run_depend>yocs_cmd_vel_mux</run_depend>
  <run_depend>kobuki_capabilities</run_depend>
  <run_depend>kobuki_node</run_depend>
  <run_depend>kobuki_bumper2pc</run_depend>
  <run_depend>kobuki_safety_controller</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>openni_launch</run_depend>
  <run_depend>laptop_battery_monitor</run_depend>
  <run_depend>rocon_app_manager</run_depend>
  <run_depend>rocon_bubble_icons</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
-->
<export>
  <build_type>ament_cmake</build_type>
</export>
</package>
